# AeroEval-Eval-Framework

./: .env.example  CLAUDE.md  README.md  pyproject.toml
configs/: default.yaml
configs/examples/: cerebras_numerical_guard.yaml  ci_regression_gate.yaml  code_generation_eval.yaml  full_stack_eval.yaml  huggingface_mmlu_eval.yaml  llm_judge_detailed.yaml  ollama_local_eval.yaml  rag_eval.yaml
data/samples/: golden_qa.jsonl  golden_rag.jsonl
src/aero_eval/: __init__.py  cli.py  config.py  models.py  registry.py  runner.py
src/aero_eval/data/: factory.py  transforms.py
src/aero_eval/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  vllm.py
src/aero_eval/scorers/: __init__.py  base.py  l1_rules.py  l2_statistical.py  l3_llm_judge.py  l4_system.py  numerical.py  rag.py
src/aero_eval/tracking/: monitor.py  wandb.py
src/aero_eval/utils/: __init__.py  logging.py  numeric.py
tests/: conftest.py  test_cli.py  test_config.py  test_data_factory.py  test_l1_rules.py  test_l2_statistical.py  test_l3_llm_judge.py  test_l4_system.py  test_models.py  test_numerical.py  test_rag.py  test_runner.py
