[project]
name = "aero-eval"
version = "0.1.0"
description = "High-performance LLM evaluation framework with four-tier scoring"
readme = "README.md"
authors = [
    { name = "Samarth Agarwal", email = "34971476+samy19980109@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6,<3",
    "pyyaml>=6.0",
    "typer>=0.9",
    "rich>=13.0",
    "deepeval>=1.0",
    "bert-score>=0.3.13",
    "rouge-score>=0.1.2",
    "sentence-transformers>=2.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "openai>=1.12",
    "anthropic>=0.25",
    "httpx>=0.27",
    "wandb>=0.16",
    "jsonschema>=4.21",
    "psutil>=5.9",
    "datasets>=2.18",
]

[project.scripts]
aero-eval = "aero_eval.cli:app"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.3",
]
